# open-firmware

./: .gitignore  AGENTS.md  README.md  filebrowser.db  firmware-tech.md
ExtraFile/: 8MB_spiffs.csv  Mk4duoVersion.h.example  SERCOM.cpp  SIConfig.hpp.example  ScribitVersion.hpp.example  autocal.GCODE
Firmware/MK4duo/: Boards.h  Configuration_Basic.h  Configuration_Cartesian.h  Configuration_Core.h  Configuration_Delta.h  Configuration_Feature.h  Configuration_Motor_Driver.h  Configuration_Muve3D.h  Configuration_Overall.h  Configuration_Pins.h  Configuration_Scara.h  Configuration_Temperature.h  Configuration_Version.h  LSM6DSL.cpp  LSM6DSL.h  LSM6DSL_Constants.h  LowPassExp.h  MK4duo.h  MK4duo.ino  MadgwickAHRS.cpp  MadgwickAHRS.h  SIHall.cpp  SIHall.h  SIIMU.cpp  SIIMU.h  SIIMU_filter.cpp  SITestBanco.cpp  SITestBanco.h
Firmware/ScribitESP/: .gitignore  RGBLEDs.cpp  RGBLEDs.hpp  SIFileDownloader.cpp  (+14 more)
docker/: .dockerignore  Dockerfile  README.md  SETUP_COMPLETE.md  build.sh  docker-compose.yml  setup-arduino.sh  test-build.sh  verify-setup.sh
meteca_mirror/: package_briki_index.json
services/calibration-service/: Dockerfile  README.md  docker-compose.yml  geometry.py  main.py  pyproject.toml
services/calibration-service/tests/: test_api.py  test_geometry.py
tools/scribit-cmd/: README.md  main.py  pyproject.toml  pyrightconfig.json
tools/scribit-cmd/scribit_cmd/: __init__.py  app.py  cli.py  gcode.py  http_server.py  mqtt_client.py  scribit_svg_to_gcode.py  settings.py  tui.py
tools/scribit-cmd/tests/: test_app.py  test_gcode.py  test_http_server.py
(+466 files in other folders)
